--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker-dev": "docker run -p 3000:3000 -v /app/node_modules -v $(pwd):/app acd7015f3581",
+    "docker-prod": "docker compose up --build"
+
   },
   "eslintConfig": {
     "extends": [
