--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ before_install:
 
 script:
   - docker run majonathant/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-1
