--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile.dev
     ports:
       - "7000:80"
     volumes:
       - /app/node_modules
-      - /app/build
       - .:/app
+    environment:
+      CI: true
