--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker compose build -t majonathant/docker-react -f Dockerfile.dev .
+  - docker compose build
 
 script:
-  - docker compose run -e CI=true majonathant/docker-react npm run test -- --coverage
+  - docker compose run -e CI=true npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
