--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker compose build
+  - docker-compose build
 
 script:
-  - docker compose run -e CI=true web npm run test -- --coverage
+  - docker-compose run -e CI=true web npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
