--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker-compose build
 
 script:
-  - docker-compose run -e CI=true web
+  - docker-compose run -e CI=true web npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
